--- a/contacts.html
+++ b/contacts.html
@@ -37,59 +37,62 @@
         </section>
     </div>
     <div class="container-fluid">
-        <div class="formcontact">
+        <div class="row formcontact">
             <div class="form">
                 <h2 class="text-capitalize mb-2">send us a message</h2>
-                <form action="#" method="post" form name="myform" onsubmit="return validateform()">
+                <form>
                     <div class="input-group">
                         <input type="text" class="margin2" name="name" id="username" placeholder="first name"
                             required="">
-                        <input type="text" name="name" placeholder="last name" id="username">
-                    </div>
-                    <div class="input-group">
-                        <input type="email" class="margin2" name="email" placeholder="email@example.com" id="email" required="">
-                        <input type="text" name="number" placeholder="phone number" id="number" required="">
-                    </div>
-                    <div class="input-group">
-                        <textarea rows="4" cols="12" placeholder="message" id="message"></textarea>
-                    </div>
-                    <div class="input-group1">
-                        <input type="submit" value="send" id="send">
-                    </div>
-                </form>
-            </div>
+                            <input type="text" name="name" placeholder="last name" id="username">
+                        </div>
+                        <div class="input-group">
+                            <input type="email" class="margin2" name="email" placeholder="email@example.com" id="email" required="">
+                            <input type="text" name="number" placeholder="phone number" id="" required="">
+                        </div>
+                        <div class="input-group">
+                            <textarea rows="4" cols="12" placeholder="message" id="message"></textarea>
+                        </div>
+                        <div class="input-group1">
+                            <input type="submit" value="send" id="send">
+                        </div>
+                    </form>
+                </div>
+                <div class="container">
+            <div class="row">
+            <div class="col-8">
             <div class="contact">
                 <h3 class="text-capitalize mb-3">contact Information</h3>
                 <p class="">Come dine with us and get the best cakes ever.</p>
                 <address>
                     <p class="my-3"><span class="fas fa-map-marker-alt"></span> 675-00900
                         Kilimani,<span> Ngong Lane plaza 3rd floor</span> </p>
-                    <p class="my-3"><span class="fas fa-mobile-alt"></span> +254701646678 </p>
-                    <a href="mailto:ccayreen24@gmail.com">ccayreen24@gmail.com</a>
-                </address>
-                <div class="socialmedia mt-3 text-center">
-                    <ul>
-                        <li a href="https://www.facebook.com/" target="blank"><i class="fa fa-facebook-official"
+                        <p class="my-3"><span class="fas fa-mobile-alt"></span> +254701646678 </p>
+                        <a href="mailto:ccayreen24@gmail.com">ccayreen24@gmail.com</a>
+                    </address>
+                    <div class="socialmedia mt-3 text-center">
+                        <ul>
+                            <li a href="https://www.facebook.com/" target="blank"><i class="fa fa-facebook-official"
                                 aria-hidden="true"></i></li>
-
-                        <li a href="https://twitter.com/" target="blank"> <i class="fa fa-twitter"
-                                aria-hidden="true"></i>
-                        </li>
-
-                        <li a href="https://www.instagram.com/" target="blank"><i class="fa fa-instagram"
+                                
+                                <li a href="https://twitter.com/" target="blank"> <i class="fa fa-twitter"
+                                    aria-hidden="true"></i>
+                                </li>
+                                
+                                <li a href="https://www.instagram.com/" target="blank"><i class="fa fa-instagram"
                                 aria-hidden="true"></i></li>
                     </ul>
                 </div>
             </div>
         </div>
-        </div>
+            </div>
+                </div>
+                </div>
+    </div>
+    <script src="js/jquery-3.4.1.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <script src="js/contacts.js"></script>
-        <script src="js/jquery-3.4.1.min.js"></script>
-        <script async type="text/javascript"
-            src="//userlike-cdn-widgets.s3-eu-west-1.amazonaws.com/95e4ae554280a8def929bbb57fc045fe4ee239e88df9fcfef83fc0c3c04cb0b2.js"></script>
-
-
+        <script async type="text/javascript" src="//userlike-cdn-widgets.s3-eu-west-1.amazonaws.com/95e4ae554280a8def929bbb57fc045fe4ee239e88df9fcfef83fc0c3c04cb0b2.js"></script>
 </body>
 
 </html>
