--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
     </div>
   
   </div>
+  <a href="index.html" ><i class="fa fa-angle-double-up" aria-hidden="true"></i></a>
  
 </body>
 </html>
