--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Big+Shoulders+Text|Pacifico&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Great+Vibes|Pacifico|Shadows+Into+Light&display=swap" rel="stylesheet">  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <title>PIECES & SLICES</title>
 </head>
@@ -26,7 +25,7 @@
         </ul>
       <div class="container-fluid"> 
     <div id="home">
-      <h1>PIECES & SLICES</h1>
+      <h1>Pieces & Slices</h1>
       <h4>Freshly baked cakes</h4>
          <a href="menu.html"><button class="button">ORDER</button></a>
 
