--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </ul>
       <div class="container-fluid"> 
     <div id="home">
-    <h1>Pieces & Slices</h1>
+    <h1>PIECES AND SLICES</h1>
     <h4>Have some cake, it's someones birthday somewhere!</h4>
          <a href="menu.html"><button class="button">ORDER</button></a>
 
