removed rows in contact class

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="container-fluid">
     <ul>
       <logo>
-        <img src="images/logo.png">
+        <!-- <img src="images/logo.png"> -->
       </logo>
 
       <li><a href="contacts.html">Contacts</a></li>
