--- a/menu.html
+++ b/menu.html
@@ -204,11 +204,39 @@
       </select>
       <button type="button" class="btn btn-dark button">Place Order</button>
     </form>
-
   </div>
-
   <div>
-
+      <div class="row">
+          <div class="col-lg-6 totals">
+              <table class="table table-sm  pizzatable">
+                  <thead>
+                    <tr>
+                      <th scope="col">Flavour</th>
+                      <th scope="col">Size</th>
+                      <th scope="col">Crust</th>
+                      <th scope="col">Topping</th>
+                      <th scope="col">Total</th>
+                    </tr>
+                  </thead>
+                  <tbody id="ordersmade">
+                    <tr>
+                      <td id="pizzaname"></td>
+                      <td id="pizzasize"></td>
+                      <td id="pizzacrust"></td>
+                      <td id="pizzatopping"></td>
+                      <td id="totals"></td>
+                    </tr>
+                  </tbody>
+                </table>
+                <p id="pizzatotal"></p>
+                <p id="totalbill"></p>
+                <p id="addedprice">Delivery will cost sh. 200</p>
+                <p id="finalmessage"></p>
+              </div>
+              
+          </div>
+        </div>
+    
   </div>
 </body>
 
