--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Big+Shoulders+Text|Pacifico&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Great+Vibes|Pacifico|Shadows+Into+Light&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <title>PIECES & SLICES</title>
@@ -15,16 +15,17 @@
 
 <body>
   <div class="container-fluid">
-      <ul >
-        <li><a href="contacts.html">Contacts</a></li>
-        <li><a href="menu.html">Menu</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="index.html">Home</a></li>
-        </ul>
       <div class="container-fluid"> 
     <div id="home">
-    <h1>PIECES AND SLICES</h1>
-    <h4>Have some cake, it's someones birthday somewhere!</h4>
+        <ul >
+            <li><a href="contacts.html">Contacts</a></li>
+            <li><a href="menu.html">Menu</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="index.html">Home</a></li>
+            </ul>
+    
+    <h1>Pieces & Slices</h1>
+    <h4>...Slicing through hearts piece by piece!</h4>
     </div>
     </div>
     <div id="about"><br>
