--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <br>
       <br>
 
-      <h2>WHAT WE DO</h2><br>
+      <h2>~What We Do~</h2><br>
       <br>
       <br>
 
@@ -41,20 +41,20 @@
         <div class="row">
           <div class="col-md-4">
             <img src="https://bit.ly/2qJWf90" height="250px" width="250px">
-            <h3>CUP CAKES</h3>
+            <h3>Cakes</h3>
             <p>At the first sample that is basically some of the samples of cup cakes that we bake and how the look
               like.</p>
           </div>
           <div class="col-md-4">
             <img src="https://bit.ly/34TGfjr" height="250px" width="250px">
-            <h3>RED VELVET </h3>
+            <h3>Cupcakes</h3>
             <p>It's official. Cake rolls are the easiest, fanciest dessert to make. I mean, just take a look at this red
               velvet cake roll.
               Would you believe it took me less than an hour to put together and with very minimal effort? </p>
           </div>
           <div class="col-md-4">
             <img src="https://bit.ly/2Q9Xnxc" height="250px" width="250px">
-            <h3>BIRTHDAY CAKES</h3>
+            <h3>Wedding Cakes</h3>
             <p>At the third sample that is basically some of the samples of cup cakes that we bake and how the look
               like.</p>
           </div>
@@ -65,7 +65,7 @@
       <BR></BR>
       <BR></BR>
       <div class="container">
-        <h2>HOW WE WORK</h2><BR></BR>
+        <h2>~How We Work~</h2><BR></BR>
         <BR></BR>
         <BR></BR>
         <div class="row">
@@ -88,7 +88,7 @@
               a cheaper and affordable cost.</p>
           </div>
         </div><BR></BR><BR></BR>
-        <h2>OUR BAKERS</h2><BR></BR>
+        <h2>~Our Bakers~</h2><BR></BR>
         <BR></BR>
         <div class="row">
           <div class="col-md-3">
